--- a/404.html
+++ b/404.html
@@ -7,14 +7,15 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="theme-color" content="#494f5c">
 	<meta name="msapplication-TileColor" content="#494f5c">
-<meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content=""><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://ethan-cope.github.io/404.html" />
 
-<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content=""/>
+  <meta itemprop="name" content="404 Page not found"><meta property="og:url" content="https://ethan-cope.github.io/404.html">
+  <meta property="og:site_name" content="Hey, I&#39;m Ethan.">
+  <meta property="og:title" content="404 Page not found">
+  <meta property="og:locale" content="en_us">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="404 Page not found">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -46,7 +47,6 @@
 
 	<script src="https://ethan-cope.github.io/js/bundle.min.580988ed2982bcbb74a1773c7abea97b43e4c43b9324e10cda0813ec6ec4bb67.js" integrity="sha256-WAmI7SmCvLt0oXc8er6pe0PkxDuTJOEM2ggT7G7Eu2c=" crossorigin="anonymous"></script>
 	
-
 </body>
 
 </html>
